Add testing checklist, results documentation, and test files for Gracula extension
- Created a comprehensive testing checklist in TESTING_CHECKLIST.md to guide feature and integration testing.
- Documented test results for group chat functionality in TEST_RESULTS.md, including issues found and fixes applied.
- Added a test directory with a standalone HTML file (test-whatsapp-group.html) simulating a WhatsApp group chat for manual testing.
- Included README.md in the test directory to explain the purpose and usage of test files.

--- a/test/test-whatsapp-group.html
+++ b/test/test-whatsapp-group.html
@@ -343,21 +343,21 @@
             log('🔄 Loading extension scripts...', 'info');
             
             const scripts = [
-                './src/shared/lib/logger.js',
-                './src/shared/config/platforms.js',
-                './src/shared/knowledge/index.js',
-                './src/shared/knowledge/domains/technology.js',
-                './src/shared/knowledge/languages/bangla.js',
-                './src/shared/knowledge/patterns/conversation-patterns.js',
-                './src/shared/knowledge/patterns/semantic-groups.js',
-                './src/entities/platform/model/Platform.js',
-                './src/entities/platform/lib/detector.js',
-                './src/entities/message/model/Message.js',
-                './src/features/context/model/SpeakerDetector.js',
-                './src/features/context/model/TopicAnalyzer.js',
-                './src/features/context/model/ConversationAnalyzer.js',
-                './src/features/context/model/ConversationSummarizer.js',
-                './src/features/context/model/ContextExtractor.js'
+                '../src/shared/lib/logger.js',
+                '../src/shared/config/platforms.js',
+                '../src/shared/knowledge/index.js',
+                '../src/shared/knowledge/domains/technology.js',
+                '../src/shared/knowledge/languages/bangla.js',
+                '../src/shared/knowledge/patterns/conversation-patterns.js',
+                '../src/shared/knowledge/patterns/semantic-groups.js',
+                '../src/entities/platform/model/Platform.js',
+                '../src/entities/platform/lib/detector.js',
+                '../src/entities/message/model/Message.js',
+                '../src/features/context/model/SpeakerDetector.js',
+                '../src/features/context/model/TopicAnalyzer.js',
+                '../src/features/context/model/ConversationAnalyzer.js',
+                '../src/features/context/model/ConversationSummarizer.js',
+                '../src/features/context/model/ContextExtractor.js'
             ];
             
             try {
