--- a/src/popup.html
+++ b/src/popup.html
@@ -577,17 +577,11 @@
     <div class="section">
       <h2>🎤 Voice-to-Text Settings</h2>
       <div class="info-box">
-        <strong>🗣️ ElevenLabs Speech-to-Text</strong><br>
-        Enable voice input to dictate messages using ElevenLabs' accurate speech recognition.
+        <strong>🗣️ Voice Input</strong><br>
+        Enable voice input to dictate messages using speech recognition. Choose from multiple providers or use the free browser-based option.
       </div>
 
       <form id="voiceSettingsForm">
-        <div class="form-group">
-          <label for="elevenlabsApiKey">ElevenLabs API Key</label>
-          <input type="text" id="elevenlabsApiKey" placeholder="sk_...">
-          <div class="hint">Get your API key at <a href="https://elevenlabs.io/app/speech-synthesis/speech-to-text" target="_blank">ElevenLabs Speech-to-Text</a></div>
-        </div>
-
         <div class="form-group">
           <label style="display: flex; align-items: center; justify-content: space-between; cursor: pointer;">
             <span style="font-weight: 600;">
@@ -601,6 +595,55 @@
           <div class="hint" style="margin-top: 8px;">
             When enabled, press <strong>Ctrl+Shift+V</strong> or click the microphone button to start voice input.
           </div>
+        </div>
+
+        <div class="form-group">
+          <label for="voiceProvider">Voice Provider</label>
+          <select id="voiceProvider">
+            <option value="webspeech">Web Speech API (Free, Built-in)</option>
+            <option value="elevenlabs">ElevenLabs (High Quality)</option>
+            <option value="openai">OpenAI Whisper (Best Accuracy)</option>
+            <option value="google">Google Speech-to-Text</option>
+            <option value="deepgram">Deepgram (Fast & Accurate)</option>
+          </select>
+          <div class="hint">Web Speech API is free and works offline. Cloud providers require API keys but offer better accuracy.</div>
+        </div>
+
+        <div class="form-group" id="elevenlabsKeyGroup" style="display: none;">
+          <label for="elevenlabsApiKey">ElevenLabs API Key</label>
+          <input type="text" id="elevenlabsApiKey" placeholder="sk_...">
+          <div class="hint">Get your API key at <a href="https://elevenlabs.io/app/speech-synthesis/speech-to-text" target="_blank">ElevenLabs Speech-to-Text</a></div>
+        </div>
+
+        <div class="form-group" id="googleVoiceKeyGroup" style="display: none;">
+          <label for="googleVoiceApiKey">Google API Key</label>
+          <input type="text" id="googleVoiceApiKey" placeholder="AIza...">
+          <div class="hint">Use the same Google AI Studio API key or get a Speech-to-Text key at <a href="https://console.cloud.google.com/" target="_blank">Google Cloud Console</a></div>
+        </div>
+
+        <div class="form-group" id="deepgramKeyGroup" style="display: none;">
+          <label for="deepgramApiKey">Deepgram API Key</label>
+          <input type="text" id="deepgramApiKey" placeholder="...">
+          <div class="hint">Get your API key at <a href="https://console.deepgram.com/" target="_blank">Deepgram Console</a></div>
+        </div>
+
+        <div class="form-group">
+          <label for="voiceLanguage">Language</label>
+          <select id="voiceLanguage">
+            <option value="en">English</option>
+            <option value="es">Spanish</option>
+            <option value="fr">French</option>
+            <option value="de">German</option>
+            <option value="it">Italian</option>
+            <option value="pt">Portuguese</option>
+            <option value="zh">Chinese</option>
+            <option value="ja">Japanese</option>
+            <option value="ko">Korean</option>
+            <option value="ar">Arabic</option>
+            <option value="hi">Hindi</option>
+            <option value="bn">Bengali</option>
+          </select>
+          <div class="hint">Select the language you'll be speaking in</div>
         </div>
 
         <button type="submit" class="btn">Save Voice Settings</button>
