Voice Input Done

--- a/src/popup.html
+++ b/src/popup.html
@@ -646,6 +646,18 @@
           <div class="hint">Select the language you'll be speaking in</div>
         </div>
 
+        <div class="form-group">
+          <label for="voiceShortcut">Voice Input Shortcut</label>
+          <input type="text" id="voiceShortcut" placeholder="Ctrl+Shift+V" readonly style="cursor: pointer; background: #f8f9fa;">
+          <div class="hint">Click the field and press your desired key combination. Default: <strong>Ctrl+Shift+V</strong></div>
+          <div class="info-box" style="margin-top: 8px; background: #e7f3ff; border-left: 4px solid #2196F3;">
+            <strong>⌨️ How to customize:</strong><br>
+            1. Click the input field above<br>
+            2. Press your desired key combination (e.g., Ctrl+Alt+V)<br>
+            3. Click "Save Voice Settings" to apply
+          </div>
+        </div>
+
         <button type="submit" class="btn">Save Voice Settings</button>
         <div id="voiceStatus" class="status"></div>
       </form>
