fixed global input

--- a/src/popup.html
+++ b/src/popup.html
@@ -670,7 +670,7 @@
           <div class="info-box" style="margin-top: 8px; background: #e7f3ff; border-left: 4px solid #2196F3;">
             <strong>⌨️ How to customize:</strong><br>
             1. Click the input field above<br>
-            2. Press your desired key combination (e.g., Ctrl+Alt+V)<br>
+            2. Press your desired key combination (e.g., Ctrl+Space, Alt+V)<br>
             3. Click "Save Voice Settings" to apply
           </div>
         </div>
