feat: Add Ghost Text feature with toggle and integration into settings

--- a/src/popup.html
+++ b/src/popup.html
@@ -598,6 +598,17 @@
               <span class="slider"></span>
             </label>
           </label>
+
+	          <label class="toggle-row">
+	            <div class="toggle-info">
+	              <span class="toggle-title">Ghost Text</span>
+	              <span class="toggle-desc">Inline gray suggestions while typing</span>
+	            </div>
+	            <label class="switch">
+	              <input type="checkbox" id="ghostTextToggle">
+	              <span class="slider"></span>
+	            </label>
+	          </label>
         </div>
 
         <button class="btn-primary" id="saveSettingsBtn">Save Changes</button>
